src/objects/EMP_Leader__c.object
<CustomObject>
    <fields>
        <fullName>CKW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CKW</label>
        <referenceTo>CKW__c</referenceTo>
        <relationshipLabel>EMP Leaders</relationshipLabel>
        <relationshipName>EMP_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Leader_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EMP Leader Consultant</label>
        <referenceTo>EMP_Consultant__c</referenceTo>
        <relationshipLabel>EMP Leaders</relationshipLabel>
        <relationshipName>EMP_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EMP_Leader__c</fullName>
        <label>EMP Leader</label>
        <referenceTo>EMP_Organization__c</referenceTo>
        <relationshipLabel>EMP Leaders</relationshipLabel>
        <relationshipName>EMP_Leaders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Leaders</relationshipLabel>
        <relationshipName>EMP_Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EMP Leader</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Leader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Leaders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>